@@ -2,9 +2,13 @@
 English Dolibarr ChangeLog
 --------------------------------------------------------------
 
+
 ***** ChangeLog for 3.3 compared to 3.2 *****
 For users:
-- New: Add supplier ref on supplier orders
+- New: Add supplier ref on supplier orders.
+- New: Can export supplier orders.
+
+For developers:
 
 
 ***** ChangeLog for 3.2 compared to 3.1 *****
